[package]
name = "plaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full", "tracing"] }
tracing = "0.1.21"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tracing-chrome = "0.4.0"
tracing-tree = "0.2.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"
tokio-console = "0.1.3"
console-subscriber = "0.1.3"
